--- a/src/arm_test/CMakeLists.txt
+++ b/src/arm_test/CMakeLists.txt
@@ -9,11 +9,13 @@ find_package(moveit_msgs REQUIRED)
 find_package(moveit_ros_planning REQUIRED)
 find_package(moveit_ros_planning_interface REQUIRED)
 find_package(moveit_visual_tools REQUIRED)
+find_package(moveit_servo REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(rclcpp_action REQUIRED)
 find_package(behaviortree_ros2 REQUIRED)
 find_package(example_interfaces REQUIRED)
 find_package(arm_interfaces REQUIRED)
+find_package(std_srvs REQUIRED)
 
 include_directories(
   include
@@ -23,6 +25,8 @@ include_directories(
 add_library(${PROJECT_NAME} SHARED
   src/arm_server.cpp
   include/arm_test/arm_server.hpp
+  src/arm_rt_server.cpp
+  include/arm_test/arm_rt_server.hpp
 )
 
 set(dependencies
@@ -36,6 +40,8 @@ set(dependencies
   "geometry_msgs"
   "example_interfaces"
   "arm_interfaces"
+  "moveit_servo"
+  "std_srvs"
 )
 
 ament_target_dependencies(${PROJECT_NAME}
@@ -45,9 +51,19 @@ ament_target_dependencies(${PROJECT_NAME}
 # Node registration
 rclcpp_components_register_node(
   ${PROJECT_NAME}
-  PLUGIN "urc_arm::server::ArmPlanningServer"
-  EXECUTABLE ${PROJECT_NAME}_ArmServer
+  PLUGIN "urc_arm::server::ArmPlanAndExecuteServer"
+  EXECUTABLE ${PROJECT_NAME}_ArmPlanAndExecuteServer
 )
+
+rclcpp_components_register_node(
+  ${PROJECT_NAME}
+  PLUGIN "urc_arm::server::ArmRTServer"
+  EXECUTABLE ${PROJECT_NAME}_ArmRTServer
+)
+
+# Simple tests
+add_executable(move src/test.cpp)
+ament_target_dependencies(move ${dependencies})
 
 # Install launch files.
 install(
@@ -60,6 +76,7 @@ install(
 # Install library
 install(TARGETS
   ${PROJECT_NAME}
+  move
   ARCHIVE DESTINATION lib
   LIBRARY DESTINATION lib
   RUNTIME DESTINATION lib/${PROJECT_NAME}
