--- a/src/arm_test/config/arm_rt_server_config.yaml
+++ b/src/arm_test/config/arm_rt_server_config.yaml
@@ -1,6 +1,9 @@
-arm_rtpose_server:
+arm_rt_server:
   ros__parameters:
-  # everything is metric here!
+    arm_planning_group: "interbotix_arm"
+
     position_err_tolerance_meters: 0.01
     velocity_err_tolerance_meters: 0.05
     angular_err_tolerance_radians: 0.0349 # ~ 2 deg
+
+    update_freq: 60 # Hz
