--- a/src/arm_test/package.xml
+++ b/src/arm_test/package.xml
@@ -11,6 +11,7 @@
 
   <exec_depend>example_interfaces</exec_depend>
   <depend>rclcpp</depend>
+  <depend>arm_interfaces</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
