fix: minor changes

--- a/src/arm_test/config/servo_config.yaml
+++ b/src/arm_test/config/servo_config.yaml
@@ -17,7 +17,7 @@ publish_period: 0.1 # 1/Nominal publish rate [seconds]
 low_latency_mode: false  # Set this to true to publish as soon as an incoming Twist command is received (publish_period is ignored)
 
 # What type of topic does your robot driver expect?
-# Currently supported are std_msgs/Float64MultiArray or trajectory_msgs/JointTrajectory
+# Currently ported are std_msgs/Float64MultiArray or trajectory_msgs/JointTrajectory
 command_out_type: trajectory_msgs/JointTrajectory
 
 # What to publish? Can save some bandwidth as most robots only require positions or velocities
