--- a/src/arm_test/config/servo_walli_config.yaml
+++ b/src/arm_test/config/servo_walli_config.yaml
@@ -7,14 +7,14 @@ use_gazebo: false # Whether the robot is started in a Gazebo simulation environm
 command_in_type: "unitless" # "unitless"> in the range [-1:1], as if from joystick. "speed_units"> cmds are in m/s and rad/s
 scale:
   # Scale parameters are only used if command_in_type=="unitless"
-  linear:  2.0 # Max linear velocity. Meters per publish_period. Unit is [m/s]. Only used for Cartesian commands.
-  rotational:  3.14 # Max angular velocity. Rads per publish_period. Unit is [rad/s]. Only used for Cartesian commands.
+  linear: 0.5 # Max linear velocity. Meters per publish_period. Unit is [m/s]. Only used for Cartesian commands.
+  rotational: 0.5 # Max angular velocity. Rads per publish_period. Unit is [rad/s]. Only used for Cartesian commands.
   # Max joint angular/linear velocity. Rads or Meters per publish period. Only used for joint commands on joint_command_in_topic.
-  joint: 3.14
+  joint: 0.5
 
 ## Properties of outgoing commands
-publish_period: 0.01  # 1/Nominal publish rate [seconds]
-low_latency_mode: false  # Set this to true to publish as soon as an incoming Twist command is received (publish_period is ignored)
+publish_period: 0.01 # 1/Nominal publish rate [seconds]
+low_latency_mode: true # Set this to true to publish as soon as an incoming Twist command is received (publish_period is ignored)
 
 # What type of topic does your robot driver expect?
 # Currently supported are std_msgs/Float64MultiArray or trajectory_msgs/JointTrajectory
@@ -26,29 +26,29 @@ publish_joint_velocities: true
 publish_joint_accelerations: false
 
 ## Incoming Joint State properties
-low_pass_filter_coeff: 1.0  # Larger --> trust the filtered data more, trust the measurements less.
+low_pass_filter_coeff: 1.0 # Larger --> trust the filtered data more, trust the measurements less.
 
 ## MoveIt properties
 move_group_name: arm # Often 'manipulator' or 'arm'
-planning_frame: base_link  # The MoveIt planning frame. Often 'base_link' or 'world'
+planning_frame: base_link # The MoveIt planning frame. Often 'base_link' or 'world'
 
 ## Other frames
-ee_frame_name: claw  # The name of the end effector link, used to return the EE pose
+ee_frame_name: leftgripper # The name of the end effector link, used to return the EE pose
 robot_link_command_frame: base_link # commands must be given in the frame of a robot link. Usually either the base or end effector
 
 ## Stopping behaviour
-incoming_command_timeout:  0.1  # Stop servoing if X seconds elapse without a new command
+incoming_command_timeout: 0.1 # Stop servoing if X seconds elapse without a new command
 # If 0, republish commands forever even if the robot is stationary. Otherwise, specify num. to publish.
 # Important because ROS may drop some messages and we need the robot to halt reliably.
 num_outgoing_halt_msgs_to_publish: 4
 
 ## Configure handling of singularities and joint limits
-lower_singularity_threshold:  30.0  # Start decelerating when the condition number hits this (close to singularity)
-hard_stop_singularity_threshold: 70.0 # Stop when the condition number hits this
-joint_limit_margin: 0.3 # added as a buffer to joint limits [radians]. If moving quickly, make this larger.
+lower_singularity_threshold: 50.0 # Start decelerating when the condition number hits this (close to singularity)
+hard_stop_singularity_threshold: 80.0 # Stop when the condition number hits this
+joint_limit_margin: 0.01 # added as a buffer to joint limits [radians]. If moving quickly, make this larger.
 
 ## Topic names
-cartesian_command_in_topic: ~/delta_twist_cmds  # Topic for incoming Cartesian twist commands
+cartesian_command_in_topic: ~/delta_twist_cmds # Topic for incoming Cartesian twist commands
 joint_command_in_topic: ~/delta_joint_cmds # Topic for incoming joint angle commands
 joint_topic: /joint_states
 status_topic: ~/status # Publish status to this topic
@@ -65,10 +65,10 @@ collision_check_type: threshold_distance
 self_collision_proximity_threshold: 0.01 # Start decelerating when a self-collision is this far [m]
 scene_collision_proximity_threshold: 0.02 # Start decelerating when a scene collision is this far [m]
 # Parameters for "stop_distance"-type collision checking
-collision_distance_safety_factor: 1000.0 # Must be >= 1. A large safety factor is recommended to account for latency
+collision_distance_safety_factor: 100.0 # Must be >= 1. A large safety factor is recommended to account for latency
 min_allowable_collision_distance: 0.01 # Stop if a collision is closer than this [m]
 
-x_proportional_gain: 1.5
-y_proportional_gain: 1.5
-z_proportional_gain: 1.5
+x_proportional_gain: 1.0
+y_proportional_gain: 1.0
+z_proportional_gain: 1.0
 angular_proportional_gain: 0.2
