--- a/src/walli_moveit_config/package.xml
+++ b/src/walli_moveit_config/package.xml
@@ -3,9 +3,8 @@
 <package format="3">
   <name>c_moveit_config</name>
   <version>0.3.0</version>
-  <description>
-     An automatically generated package with all the configuration and launch files for using the walliV2 with the MoveIt Motion Planning Framework
-  </description>
+  <description> An automatically generated package with all the configuration and launch files for
+    using the walliV2 with the MoveIt Motion Planning Framework </description>
   <maintainer email="mkerner1876@gmail.com">Matthew Kerner</maintainer>
 
   <license>BSD</license>
@@ -47,6 +46,6 @@
 
 
   <export>
-      <build_type>ament_cmake</build_type>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
